# aws2-wrap

./: pyproject.toml
aws2wrap/: __init__.py
